discussion/kv_engine/177080/177080_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46738: Make dcp_conn_buffer_ratio dynamic

The config param was already declared dynamic, but then we missed to
reflect config changes into the cached FlowControl state.

With this patch the cbepctl path is complete.

Change-Id: Idaa45a7f6c039c30793b03c1ab33a0517d948f51

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-07-05 14:14:39.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-05 18:52:21.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47489/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes
unknown file: error: C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCantExceedSystemLimit_Mcbp_XattrYes_JsonYes_SnappyYes: Temporary failure (134)" thrown in SetUp().
[  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2 ms)
TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47489/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18709/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:23:29: error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::newConsumer(gsl::not_null<DcpConsumer*> consumer) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:31:29: error: out-of-line definition of "handleDisconnect" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
void DcpFlowControlManager::handleDisconnect(
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: expected parameter declarator [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:50: error: expected ")" [clang-diagnostic-error]
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:21: note: to match this "("
    void newConsumer(gsl::not_null<DcpConsumer*> consumer);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: expected parameter declarator [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:27: error: use of undeclared identifier "gsl" [clang-diagnostic-error]
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:55: error: expected ")" [clang-diagnostic-error]
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:40:26: note: to match this "("
    void handleDisconnect(gsl::not_null<DcpConsumer*> consumer);
                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18709/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/flow-control-manager.cc:23:29:
error: out-of-line definition of "newConsumer" does not match any declaration in "DcpFlowControlManager" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18709/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39901/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/flow-control-manager.h:38:22:
error: use of undeclared identifier "gsl"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39901/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21612/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferNo":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferNo
[2022-07-05T17:31:12.594Z] unknown file: Failure
[2022-07-05T17:31:12.594Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck not a buffer ack opcode request:{"bodylen":30,"cas":0,"datatype":"raw","extlen":0,"key":"<ud>connection_buffer_size</ud>","keylen":22,"magic":"ClientRequest","opaque":14,"opcode":"DCP_CONTROL","vbucket":0}" thrown in the test body.
[2022-07-05T17:31:12.594Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferNo, where GetParam() = (Mcbp, XattrNo, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>) (46 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferNo
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21612/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17868/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8390/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20955/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20601/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19832/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28988/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8489/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
